--- a/responsive.css
+++ b/responsive.css
@@ -6,6 +6,15 @@
     body{
         width: 100vw;
     }
+    .search{
+        width: 40%;
+    }
+    .logo{
+        justify-self: center;
+    }
+    .search input{
+        width: 100%;
+    }
     .snavbar{
         width: 100%;
         display: grid;
@@ -18,7 +27,7 @@
         margin:0;
     }
     .ctgr-card{
-        margin: 10px 10px;
+        margin: 10px 20px;
     }
     .fp{
         margin-left: 10px;
@@ -49,6 +58,7 @@
     .prd-card img{
         width: 190px;
     }
+    
 }
 /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
 @media screen and (max-width: 600px) {
@@ -67,9 +77,18 @@
       right: 0;
       top: 0;
     }
+    .topnav{
+        justify-content: space-between;
+    }
     .topnav.responsive a {
       float: none;
       display: block;
       text-align: left;
+    }
+  }
+
+  @media screen and (max-width: 500px) {
+    .ctgr-card{
+        display: block;
     }
   }
