--- a/style.css
+++ b/style.css
@@ -49,6 +49,9 @@
     letter-spacing: 1px;
     color: orangered;
 }
+.logo img{
+    width: 70px;
+}
 .snavbar .search input{
     width: 30vw;
     height: 25px;
@@ -63,7 +66,8 @@
 .topnav {
     background-color: #333;
     overflow: hidden;
-    
+    justify-content: center;
+    display: flex;
   }
   .fa-bars{
     margin-right: 20px;
@@ -96,69 +100,39 @@
   .topnav .icon {
     display: none;
   }
-.fad, .sad, .tad{
+
+
+.ad{
     position: relative;
-    color: white;
-    width: 100%;
-    height: fit-content;
-    margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+      
+}
+.ad img{
+    width: 30vw;
+}
+.ads{
+    margin: 10px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    flex-direction: row;
+    -ms-flex-wrap: wrap;
+  
 }
 
-.fad .centered{
-    position: relative;
-   background: url(carousel-1.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    text-align: center;
-    align-items: center;
-    display: grid;
-    height: 244px;
-}
-.sad .centered{
-    position: relative;
-   background: url(carousel-2.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    text-align: center;
-    align-items: center;
-    display: grid;
-    margin-top: 10px;
-    height: 244px;
-}
-.tad .centered{
-    position: relative;
-   background: url(carousel-3.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    text-align: center;
-    margin-top: 10px;
-    align-items: center;
-    display: grid;
-    height: 244px;
-    margin-bottom: 10px;
-}
-
-.centered button{
-    padding: 13px 35px;
+.center{
+    position: absolute;
+    top: 33%;
+    width: 50%;
+    left: 0;
     color: white;
-    font-weight: 900;
-    background: transparent;
-    font-size: 16pt;
-    margin-top: 30px;
-    position: relative;
-    display: inline-flex;
-    color: white;
+    text-align: center;
+    align-items: center;
 }
-.centered button:hover{
-    background-color: rgba(231, 72, 14, 0.479);
-}
-.centered h1{
-    margin-top: 20px;
-}
-.centered p{
-    margin-top: 30px;
-    font-size: 13pt;
-    font-weight: 500;
+.center h1{
+    margin-bottom: 20px;
 }
 .features{
     display: flex;
@@ -178,19 +152,31 @@
 #ctgr h1{
     margin: 20px 0px;
 }
-.pr-ctgr{
+/* .pr-ctgr{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     flex-wrap: wrap;
     
-}
-.ctgr-card{
-    display: flex;
+} */
+/* .ctgr-card{
+    display: inline-block;
     margin: 20px 40px;
     background-color: white;
+
+
+} */
+
+.pr-ctgr{
+    display: flex;
+    flex-wrap: wrap;
+    margin: 1em;
+    justify-content: start;
+}
+.ctgr-card{
+    margin: 1.26em;
 }
 .ctgr-card img{
-    width: 100px;
+    width: 112px;
 }
 
 .fp{
@@ -215,8 +201,8 @@
 footer{
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    margin: 0px 10px;
+    
+    
     background-color: rgb(61 70 77);
     color: white;
     justify-content: space-evenly;
@@ -226,7 +212,7 @@ footer{
     display: block;
     margin: 10px 20px;
     line-height: 2;
-    max-width: 20vw;
+    max-width: 30vw;
 }
 
 .footer-item a{
