--- a/style.css
+++ b/style.css
@@ -1,105 +1,13 @@
+
+  @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
+
+
+
 *{
     margin: 0;padding: 0;
+    font-family: 'Roboto Slab', serif;
     
 }
-.container{
-    background-color: rgb(240, 240, 240);
-}
-
-.item{
-   
-    margin: 10px;
-    background-color: orangered;
-    padding: 11px;
-    border-radius: 10px;
-    border: none;
-}
-.item a {
-    text-decoration: none;
-    color: white;
-    padding: 20px;
-    
-}
-
-.combine-navbar{
-    position: sticky;
-    top: 0;
-    z-index: 9;
-}
-
-.snavbar{
-    display: flex;
-    background-color: white;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-    
-}
-
-.snavbar .logo:hover{
-    color: orangered;
-    font-weight: 900;
-    cursor: pointer;
-}
-
-.snavbar .logo{
-    margin: 10px;
-    font-size: 19pt;
-    font-weight: 900;
-    letter-spacing: 1px;
-    color: orangered;
-}
-.logo img{
-    width: 70px;
-}
-.snavbar .search input{
-    width: 30vw;
-    height: 25px;
-    border-radius: 5px;
-}
-.snavbar .care{
-    color: black;
-    margin: 20px;
-}
-
-/* Add a black background color to the top navigation */
-.topnav {
-    background-color: #333;
-    overflow: hidden;
-    justify-content: center;
-    display: flex;
-  }
-  .fa-bars{
-    margin-right: 20px;
-  }
-  
-  /* Style the links inside the navigation bar */
-  .topnav a {
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
-  
-  /* Change the color of links on hover */
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  /* Add an active class to highlight the current page */
-  .topnav a.active {
-    background-color: orangered;
-    color: white;
-  }
-  
-  /* Hide the link that should open and close the topnav on small screens */
-  .topnav .icon {
-    display: none;
-  }
 
 
 .ad{
@@ -112,7 +20,7 @@
 .ad img{
     width: 30vw;
 }
-.ads{
+/* .ads{
     margin: 10px;
     display: flex;
     justify-content: space-between;
@@ -120,6 +28,9 @@
     flex-direction: row;
     -ms-flex-wrap: wrap;
   
+} */
+.ads img{
+    height: 60vh;
 }
 
 .center{
@@ -147,24 +58,14 @@
 }
 
 #ctgr{
-    margin: 20px 40px
+    margin: 20px 40px;
+    display: flex;
+    justify-content: center;
 }
 #ctgr h1{
     margin: 20px 0px;
+
 }
-/* .pr-ctgr{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    
-} */
-/* .ctgr-card{
-    display: inline-block;
-    margin: 20px 40px;
-    background-color: white;
-
-
-} */
 
 .pr-ctgr{
     display: flex;
@@ -173,7 +74,7 @@
     justify-content: start;
 }
 .ctgr-card{
-    margin: 1.26em;
+    margin: 4% 4%;
 }
 .ctgr-card img{
     width: 112px;
@@ -191,7 +92,7 @@
     margin: 3px 60px;
 }
 .prd-card{
-    margin: 20px 40px;
+    margin: 3% 3%;
 }
 
 .prd-card img{
